--- a/sass/game.scss
+++ b/sass/game.scss
@@ -132,8 +132,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-
     background-color: rgba(223, 78, 78, 0.4);
+    pointer-events: none;
   }
 
 }
